@@ -1,3 +1,8 @@
+2006-10-22  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/config/routes.rb: Change URL /archives/rdf_(.+) to /rdf/rdf_$1.
+	* donrails/app/models/article_sweeper.rb (ArticleSweeper::ep_category): likewise.
+
 2006-10-21  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/config/routes.rb: Change URL /notes/ to /archives/. 
